--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <meta name="description" content="Movies" />
+  <meta name="description" content="Museum" />
   <meta name="keywords" content="mths, ics2o" />
   <meta name="author" content="Adam" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   <link rel="manifest" href="site.webmanifest" />
-  <title>Movies</title>
+  <title>Museum</title>
 </head>
 <body>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -21,12 +21,12 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">What movies can you watch?</span>
+        <span class="mdl-layout-title">Museum discount</span>
       </div>
     </header>
     <main class="mdl-layout__content">
       <form action="#">
-        <div>Plese enter your age.</div>
+        <div>Plese enter your age. Only ages between 12 and 21 are eligible for student pricing. Everyone gets student pricing on Tuesdays and Thursdays.</div>
         <br />
         <div class="mdl-textfield mdl-js-textfield">
           <!-- input pattern attribute -->
